# tidy_tweet

./: .gitignore  MANIFEST.in  README.md  contributing.md  generate_schema_diagram.py  noxfile.py  pyproject.toml  schema.md  setup.cfg
.github/workflows/: pypi_publish.yml  tests.yml
docs/: .gitignore  _quarto.yml  data_model.drawio  index.qmd  schema.md  tutorials.qmd
docs/tutorials/: tidy_tweet_sql_python.ipynb
src/tidy_tweet/: __init__.py  __main__.py  _version.py  database.py  processing.py  tweet_mapping.py  utilities.py
tests/: test_cli.py  test_metadata.py  test_overall.py
tests/data/: ObservatoryTeam.jsonl
tidy_tweet/: __init__.py  processing.py  tweet_mapping.py  utilities.py
