[metadata]
name = tidy_tweet
author = QUT Digital Observatory
author_email = digitalobservatory@qut.edu.au
description = Tidies Twitter json collected with Twarc into relational tables
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/QUT-Digital-Observatory/tidy_tweet
project_urls =
    Bug Tracker = https://github.com/QUT-Digital-Observatory/tidy_tweet/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Environment :: Console
    Intended Audience :: Science/Research
    Topic :: Sociology

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
include_package_data = True

[options.packages.find]
where = src

[options.extras_require]
development =
    nox >= 2021.10.1

[options.entry_points]
console_scripts =
    tidy_tweet = tidy_tweet.__main__:tidy_twarc_jsons

[flake8]
# Copied from https://sbarnea.com/lint/black/
# Recommend matching the black line length (default 88),
# rather than using the flake8 default of 79:
max-line-length = 88
extend-ignore =
    # See https://github.com/PyCQA/pycodestyle/issues/373
    E203,
exclude =
    .git,
    __pycache__,
    .nox,
    dist,
    build
